# serenity-example

./: .gitignore  CMakeLists.txt  README.md
.hackstudio/: config.json
src/: main.cpp
